🐙 adding github's octicons
See https://octicons.github.com/ for reference

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   <link rel="stylesheet" href="proton.css">
 </head>
 <body>
-  Initial Setup Inside styles folder
+  <i class="ghicn ghicn-alert"></i> Initial Setup Inside styles folder
 </body>
 </html>
