--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,24 @@
 </head>
 <body>
   <i class="ghicn ghicn-alert"></i> Initial Setup Inside styles folder
+
+  <atom-notifications>
+    <atom-notification class="error icon icon-flame native-key-bindings" tabindex="-1">
+      <div class="content">
+        <div class="message item">
+          <p>This is an error notification</p>
+        </div>
+        <div class="detail item">
+          <div class="detail-content"></div>
+          <a href="#" class="stack-toggle"></a>
+          <div class="stack-container"></div>
+        </div>
+        <div class="meta item">Some meta</div>
+      </div>
+      <div class="close icon icon-x"></div>
+      <div class="close-all btn btn-error">Close All</div>
+    </atom-notification>
+  </atom-notifications>
+
 </body>
 </html>
