moving 🗻 of less over to sass, small refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="proton.css">
 </head>
 <body>
-  <i class="ghicn ghicn-alert"></i> Initial Setup Inside styles folder
+  <i class="icon icon-alert"></i> Initial Setup Inside styles folder
 
   <atom-notifications>
     <atom-notification class="error icon icon-flame native-key-bindings" tabindex="-1">
